--- a/pojistenci.html
+++ b/pojistenci.html
@@ -31,6 +31,7 @@
           <th>PSČ</th>
           <th>E-mail</th>
           <th>Telefon</th>
+          <th>Akce</th>
         </tr>
       </thead>
       <tbody id="pojistenecTableBody">
